# lampe

./: .gitignore  CITATION.bib  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: test.yml  tests.yml
docs/: api.rst  conf.py  index.rst  tutorials.rst
docs/static/: custom.css
docs/tutorials/: coverage.ipynb  embedding.ipynb  fmpe.ipynb  npe.ipynb  nre.ipynb  nse.ipynb  simulators.ipynb
lampe/: __init__.py  data.py  diagnostics.py  inference.py  masks.py  mcmc.py  nn.py  optim.py  patch.py  plot.py  plots.py  priors.py  train.py  utils.py
lampe/diagnostics/: __init__.py  coverage.py
lampe/distributions/: __init__.py  transforms.py
lampe/inference/: __init__.py  amnre.py  bnre.py  cnre.py  dcp.py  fmpe.py  mcmc.py  npe.py  nre.py
lampe/nn/: __init__.py  flows.py  losses.py  masks.py  modules.py  pipes.py
lampe/simulators/: __init__.py  ees.py  es.py  gw.py  hh.py  priors.py  slcp.py
notebooks/: 01_npe.ipynb  01_simulators.ipynb  02_npe.ipynb  02_nre.ipynb  03_nre.ipynb  slcp-amnpe.ipynb  slcp-amnre.ipynb  slcp-npe.ipynb  slcp-nre.ipynb
sphinx/: build.sh  conf.py  index.rst  tutorials.rst
sphinx/api/: data.rst  diagnostics.rst  index.rst  inference.rst  masks.rst  plots.rst  priors.rst  utils.rst
sphinx/api/distributions/: index.rst  transforms.rst
sphinx/api/nn/: flows.rst  index.rst  losses.rst
sphinx/static/: custom.css
tests/: test_data.py  test_diagnostics.py  test_distributions.py  test_inference.py  test_masks.py  test_nn.py  test_nn_flows.py  test_plots.py  test_utils.py
tutorials/: 01_simulators.ipynb  02_npe.ipynb  03_nre.ipynb  04_coverage.ipynb  04_nse.ipynb  05_embedding.ipynb  06_embedding.ipynb
