[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lampe"
description = "Likelihood-free AMortized Posterior Estimation with PyTorch"
authors = [
  {name = "The Probabilists", email = "theprobabilists@gmail.com"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]
keywords = [
    "torch",
    "simulation",
    "inference",
    "amortized",
    "bayesian",
    "posterior",
    "likelihood",
    "mcmc",
]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
documentation = "https://lampe.readthedocs.io"
source = "https://github.com/probabilists/lampe"
tracker = "https://github.com/probabilists/lampe/issues"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "lampe.__version__"}
