[metadata]
name = lampe
version = attr: lampe.__version__
description = Likelihood-free AMortized Posterior Estimation with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    torch
    simulation-based
    inference
    amortized
    bayesian
    posterior
    likelihood
    mcmc
author = François Rozet
author_email = francois.rozet@outlook.com
license = MIT License
url = https://github.com/francois-rozet/lampe
project_urls =
    Documentation = https://lampe.readthedocs.io
    Source = https://github.com/francois-rozet/lampe
    Tracker = https://github.com/francois-rozet/lampe/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
