[metadata]
name = lampe
version = attr: lampe.__version__
description = Likelihood-free AMortized Posterior Estimation with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    torch
    simulation-based
    inference
    amortized
    bayesian
    posterior
    likelihood
    mcmc
author = The Probabilists
author_email = theprobabilists@gmail.com
project_urls =
    Documentation = https://lampe.readthedocs.io
    Source = https://github.com/probabilists/lampe
    Tracker = https://github.com/probabilists/lampe/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
